入力画面とタイマー画面

--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
   },
   "dependencies": {
     "astro": "^5.1.10"
+  },
+  "pnpm": {
+    "executionEnv": {
+      "nodeVersion": "22.13.1"
+    }
   }
 }
