--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/partytown": "^2.1.3",
     "@fontsource/zen-kaku-gothic-new": "^5.1.1",
     "astro": "^5.1.10"
   },
