--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   },
   "dependencies": {
     "@astrojs/partytown": "^2.1.3",
+    "@astrojs/react": "^4.2.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fontsource/zen-kaku-gothic-new": "^5.1.1",
-    "astro": "^5.1.10"
+    "astro": "^5.1.10",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "pnpm": {
     "executionEnv": {
