--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "executionEnv": {
       "nodeVersion": "22.13.1"
     }
+  },
+  "devDependencies": {
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6"
   }
 }
