--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "format": "eslint --fix src/**/*.{ts,tsx} --ext .ts,.tsx && prettier --write ."
   },
   "dependencies": {
     "@astrojs/react": "^4.2.0",
@@ -23,7 +24,13 @@
     }
   },
   "devDependencies": {
+    "@eslint/js": "^9.31.0",
     "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6"
+    "@types/react-dom": "^19.1.6",
+    "@typescript-eslint/eslint-plugin": "^8.37.0",
+    "@typescript-eslint/parser": "^8.37.0",
+    "eslint": "^9.31.0",
+    "prettier": "^3.6.2",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
