--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "format": "eslint --fix src/**/*.{ts,tsx} --ext .ts,.tsx && prettier --write ."
   },
   "dependencies": {
-    "@astrojs/react": "^4.2.0",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@fontsource/zen-kaku-gothic-new": "^5.1.1",
-    "astro": "^5.1.10",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "@astrojs/react": "4.2.0",
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.0",
+    "@fontsource/zen-kaku-gothic-new": "5.1.1",
+    "astro": "5.1.10",
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "pnpm": {
     "executionEnv": {
@@ -24,13 +24,13 @@
     }
   },
   "devDependencies": {
-    "@eslint/js": "^9.31.0",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@typescript-eslint/eslint-plugin": "^8.37.0",
-    "@typescript-eslint/parser": "^8.37.0",
-    "eslint": "^9.31.0",
-    "prettier": "^3.6.2",
-    "prettier-plugin-astro": "^0.14.1"
+    "@eslint/js": "9.31.0",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
+    "@typescript-eslint/eslint-plugin": "8.37.0",
+    "@typescript-eslint/parser": "8.37.0",
+    "eslint": "9.31.0",
+    "prettier": "3.6.2",
+    "prettier-plugin-astro": "0.14.1"
   }
 }
